# EdgeLLM

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aihub/: run_on_snapdragon.py
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: README.md
android/app/src/main/java/com/edgellm/app/: HfTokenizer.kt  MainActivity.kt  OnnxLlm.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
configs/: default.yaml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
edgellm/: __init__.py  benchmark.py  cli.py  config.py  export.py  models.py  quantize.py  report.py  runners.py
kernels/: CMakeLists.txt  int8_gemm.cpp
results/: benchmark.md  benchmarks.json
scripts/: run_all.sh
tests/: test_benchmark.py  test_cli.py  test_config.py  test_report.py
