[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgellm"
version = "0.1.0"
description = "Quantize a small LLM and run it on-device (CPU/GPU/mobile/Qualcomm NPU) with a C++ harness and honest benchmarks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Vijay Kapse" }]
keywords = ["llm", "quantization", "onnx", "edge", "qualcomm", "npu", "inference"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "typer>=0.12",
  "pyyaml>=6.0",
  "numpy>=1.24",
  "psutil>=5.9",
]

[project.optional-dependencies]
onnx = [
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "optimum[onnxruntime]>=1.20",
]
eval = [
  "datasets>=2.19",
]
report = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
edgellm = "edgellm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["edgellm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's API deliberately puts Option()/Argument() calls in argument defaults.
"edgellm/cli.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
